@@ -2,6 +2,7 @@ import jug.compound
 import jug.mapreduce
 import numpy as np
 from jug.backends.dict_store import dict_store
+from jug.tests.utils import simple_execute
 from jug.compound import CompoundTask
 from jug.tests.test_mapreduce import mapper, reducer, dfs_run
 from jug.tests.task_reset import task_reset
@@ -22,9 +23,9 @@ def test_compound():
 def test_w_barrier():
     from jug.options import default_options
     store, space = jug.jug.init('jug/tests/jugfiles/compound_wbarrier.py', 'dict_store')
-    jug.jug.execute(store, default_options)
+    simple_execute()
     store, space = jug.jug.init('jug/tests/jugfiles/compound_wbarrier.py', store)
-    jug.jug.execute(store, default_options)
+    simple_execute()
     assert 'sixteen' in space
     assert space['sixteen'].result == 16
 
