@@ -2,6 +2,7 @@ import jug.jug
 import jug.task
 from jug.options import Options, default_options
 from jug.task import Task
+from jug.tests.utils import simple_execute
 from jug.backends.dict_store import dict_store
 import random
 jug.jug.silent = True
@@ -15,7 +16,7 @@ def test_jug_execute_simple():
     setall = [Task(setAi, i) for i in xrange(N)]
     store = dict_store()
     jug.task.Task.store = store
-    jug.jug.execute(store, default_options)
+    simple_execute()
     assert False not in A
     assert max(store.counts.values()) < 4
 
@@ -32,7 +33,7 @@ def test_jug_execute_deps():
         prev = Task(setAi, idx, prev)
     store = dict_store()
     jug.task.Task.store = store
-    jug.jug.execute(store, default_options)
+    simple_execute()
     assert False not in A
     assert max(store.counts.values()) < 4
 
