@@ -1,11 +1,12 @@
-from jug.options import default_options
 from jug.tests.task_reset import task_reset
+from jug.tests.utils import simple_execute
+from jug import task
 import jug.jug
 
 @task_reset
 def test_tasklets():
     store, space = jug.jug.init('jug/tests/jugfiles/tasklets.py', 'dict_store')
-    jug.jug.execute(store, default_options)
+    simple_execute()
     assert space['t0'].value() == 0
     assert space['t2'].value() == 4
     assert space['t0_2'].value() == 4
@@ -14,7 +15,7 @@ def test_tasklets():
 @task_reset
 def test_iteratetask():
     store, space = jug.jug.init('jug/tests/jugfiles/iteratetask.py', 'dict_store')
-    jug.jug.execute(store, default_options)
+    simple_execute()
     assert space['t0'].value() == 0
     assert space['t1'].value() == 2
     assert space['t2'].value() == 4
